; ModuleID = '/home/carl/AnghaBench/vlc/src/text/extr_memstream.c_vlc_memstream_open.c'
source_filename = "/home/carl/AnghaBench/vlc/src/text/extr_memstream.c_vlc_memstream_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_memstream = type { i32, i64, i32* }

@EOF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_memstream_open(%struct.vlc_memstream* %0) #0 {
  %2 = alloca %struct.vlc_memstream*, align 8
  store %struct.vlc_memstream* %0, %struct.vlc_memstream** %2, align 8
  %3 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %4 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %3, i32 0, i32 0
  store i32 0, i32* %4, align 8
  %5 = call i32* @calloc(i32 1, i32 1)
  %6 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %7 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %6, i32 0, i32 2
  store i32* %5, i32** %7, align 8
  %8 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %9 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = icmp eq i32* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i64 @unlikely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load i32, i32* @EOF, align 4
  %17 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %18 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  br label %19

19:                                               ; preds = %15, %1
  %20 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %21 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %20, i32 0, i32 1
  store i64 0, i64* %21, align 8
  %22 = load %struct.vlc_memstream*, %struct.vlc_memstream** %2, align 8
  %23 = getelementptr inbounds %struct.vlc_memstream, %struct.vlc_memstream* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  ret i32 %24
}

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i64 @unlikely(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
